style: fix styling on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,9 @@ body {
   height: 100vh;
   overflow: hidden;
 }
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
